- implemented createPerson over all layers - fixed a bug where filtering by color did not work as intended
